--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ authors = [
 description = "Adds colors to your console prints."
 readme = "README.md"
 requires-python = ">=3.5"
+license = { file="LICENSE" }
+keywords = ["python", "console", "colors", "print"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Education",
@@ -23,4 +25,4 @@ classifiers = [
 ]
 
 [project.urls]
-"GitHub" = "https://github.com/RasseTheBoy/ConsoleColors"
+Repository = "https://github.com/RasseTheBoy/ConsoleColors"
