--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,12 @@
 [metadata]
-name = ConsoleColors
+name = ColorfulOutput
 version = 0.0.1
 author = Rasmus Ohert
 author_email = rassemichael@gmail.com
 description = Adds colors to your console prints.
-long_description = A python library that adds colors to your console prints.
-url = https://github.com/RasseTheBoy/ConsoleColors
+long_description = file : README.md
+long_description_content_type = text/markdown
+url = https://github.com/RasseTheBoy/ColorfulOutput
 classifiers = 
     Development Status :: 5 - Production/Stable
     Intended Audience :: Education
